<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFD6D6"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewHeading"
        android:layout_width="252dp"
        android:layout_height="62dp"
        android:layout_marginBottom="16dp"
        android:text="@string/donation_history"
        android:textColor="#652F2F"
        android:textSize="33sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#FFD6D6">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFD6D6"
            android:gravity="center"
            android:textColor="#772D2D"
            android:textColorHighlight="#EDD3C8"
            android:textSize="20sp" />

    </ScrollView>

    <Button
        android:id="@+id/accessDonation"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#EB753131"
        android:textColor="#EAD7D7"
        android:text="@string/access_donations"
        android:textSize="19sp" />

    <Button
        android:id="@+id/delete_data_button"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:backgroundTint="#EB753131"
        android:text="@string/delete_all_data"
        android:textColor="#EAD7D7"
        android:textColorHighlight="#68A1D1"
        android:textSize="18sp" />

</LinearLayout>
