<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6D0D0">

    <EditText
        android:id="@+id/editTextUsernameSignUp"
        android:layout_width="352dp"
        android:layout_height="57dp"
        android:hint="@string/username"
        android:inputType="text"
        android:textColor="#FFF"
        android:textColorHint="#652F2F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.41" />

    <EditText
        android:id="@+id/editTextEmailSignUp"
        android:layout_width="352dp"
        android:layout_height="67dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="#FFF"
        android:textColorHint="#652F2F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.474"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.534" />

    <EditText
        android:id="@+id/editTextPasswordSignUp"
        android:layout_width="355dp"
        android:layout_height="62dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#FFF"
        android:textColorHint="#652F2F"
        app:layout_constraintBottom_toTopOf="@+id/editTextConfirmPasswordSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailSignUp"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/editTextConfirmPasswordSignUp"
        android:layout_width="354dp"
        android:layout_height="65dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textColor="#FFF"
        android:textColorHint="#652F2F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.762" />

    <Button
        android:id="@+id/buttonSignUpSignUp"
        android:layout_width="195dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="#531B1B"
        android:text="@string/sign_up"
        android:textColor="#EAD7D7"
        android:textSize="18.5sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextConfirmPasswordSignUp"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="149dp"
        android:layout_height="55dp"
        android:text="@string/sign_up"
        android:textColor="#652F2F"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toStartOf="@+id/s_in"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.442" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="144dp"
        android:layout_height="135dp"
        android:layout_marginTop="107dp"
        android:layout_marginBottom="489dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_action_name" />

    <Button
        android:id="@+id/s_in"
        android:layout_width="111dp"
        android:layout_height="48dp"
        android:backgroundTint="#531B1B"
        android:text="@string/sign_in"
        android:textColor="#EAD7D7"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.69"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.546" />

</androidx.constraintlayout.widget.ConstraintLayout>
