<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6D0D0">

    <!-- Sign In Title -->

    <!-- Line Separator -->

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="138dp"
        android:layout_height="126dp"
        android:layout_marginTop="92dp"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_action_name"
        app:layout_constraintBottom_toTopOf="@+id/textViewSignInTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.471" />

    <TextView
        android:id="@+id/textViewSlogan"
        android:layout_width="334dp"
        android:layout_height="64dp"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="@string/save_food_save_lives"
        android:textColor="#531B1B"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageViewLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/textViewSignInTitle"
        android:layout_width="175dp"
        android:layout_height="43dp"
        android:text="@string/sign_in"
        android:textAlignment="center"
        android:textSize="27sp"
        android:textStyle="bold"
        android:textColor="#531B1B"
        app:layout_constraintBottom_toTopOf="@+id/editTextUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogo"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="271dp"
        android:layout_height="59dp"
        android:layout_marginHorizontal="30dp"
        android:hint="@string/username"
        android:minHeight="48dp"
        android:textColor="#FFF"
        android:textColorHint="#652F2F"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSignInTitle"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="271dp"
        android:layout_height="63dp"
        android:layout_marginHorizontal="30dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#FFF"
        android:textColorHint="#652F2F"
        app:layout_constraintBottom_toTopOf="@+id/buttonSignIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextUsername"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="163dp"
        android:layout_height="52dp"
        android:text="@string/sign_in"
        android:textColor="#EAD7D7"
        android:textSize="18.5sp"
        android:backgroundTint="#531B1B"
        app:layout_constraintBottom_toTopOf="@+id/textOr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/textOr"
        android:layout_width="103dp"
        android:layout_height="32dp"
        android:text="@string/or"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="#531B1B"
        app:layout_constraintBottom_toTopOf="@+id/buttonSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSignIn"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="165dp"
        android:layout_height="51dp"
        android:text="@string/sign_up"
        android:textColor="#EAD7D7"
        android:textSize="18.5sp"
        android:backgroundTint="#531B1B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textOr"
        app:layout_constraintVertical_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>
