<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EACECE"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/makeDonation"
        android:layout_width="243dp"
        android:layout_height="61dp"
        android:text="@string/make_donation"
        android:alpha="0.9"
        android:textColor="#EAD7D7"
        android:textSize="18.5sp"
        android:backgroundTint="#531B1B"
        app:layout_constraintBottom_toTopOf="@+id/seeDonations"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/seeDonations"
        android:layout_width="235dp"
        android:layout_height="64dp"
        android:backgroundTint="#531B1B"
        android:text="@string/see_donations"
        android:textColor="#EAD7D7"
        android:textSize="18.5sp"
        android:alpha="0.9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/makeDonation"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="294dp"
        android:layout_height="46dp"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="#682D29"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="322dp"
        android:layout_height="316dp"
        app:layout_constraintBottom_toTopOf="@+id/makeDonation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/whatsapp_image_2024_04_12_at_02_07_07" />

</androidx.constraintlayout.widget.ConstraintLayout>
