<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFDDDD"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="319dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/be_the_change_you_nwant_to_see_in_the_world"
        android:textSize="27sp"
        android:textStyle="bold"
        android:textColor="#652F2F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.057" />

    <Button
        android:id="@+id/getStartedButton"
        android:layout_width="83dp"
        android:layout_height="91dp"
        android:layout_below="@id/textView"
        android:layout_centerHorizontal="true"
        android:alpha="0.8"
        android:backgroundTint="#100F0F"
        android:text="@string/arrow"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.923" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="467dp"
        android:layout_height="331dp"
        app:layout_constraintBottom_toTopOf="@+id/getStartedButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.22"
        app:srcCompat="@drawable/home" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="221dp"
        android:layout_height="54dp"
        android:fontFamily="@font/playfair_display"
        android:text="@string/get_started"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="#652F2F"
        app:layout_constraintBottom_toTopOf="@+id/getStartedButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>